--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,12 +1,39 @@
 /* general */
-.txtColor {
- fill: white;
+ text {
+	font-family: "Colfax-Light";
+	fill: white;
+}
+
+.bgPopUp {
+	x: 0;
+	y: 0;
+	width: 100%;
+	height: 100%;
+	fill: black;
+	opacity: 0.9;
 }
 
 /* header */
 .txtHeader {
-	font-size: 12;
-	y: 5%+6;
+	font-size: 20;
+	y: 8%+6;
+}
+
+.bgHead {
+	x: 0;
+	y: 0;
+	width: 100%;
+	height: 15%;
+	fill: black;
+}
+
+.headSeparator{
+	x1: 0;
+	x2: 100%;
+	y1: 15%;
+	y2: 15%;
+	stroke-width: 1;
+	fill: fb-light-gray;
 }
 
 #txtUnsynced {
@@ -19,74 +46,64 @@
 	x: 95%;
 }
 
-#headSeparator{
-	x1: 0;
-	x2: 100%;
-	y1: 8%;
-	y2: 8%;
-	stroke-width: 1;
-	fill: fb-grey;
-}
-
 /* main screen */
-
-#txtInfo {
-	font-size: 36;
+#welcomeText {
+	x: 10%;
+	y: 18%;
+	width: 80%;
+	height: 30%;
 	text-anchor: middle;
-	x: 50%;
-	y: 30%+18;
+	display-align: center;
+	font-size: 32;
+	font-family: "Colfax-Light";
+	fill: white;
 }
 
 #btnNewWeight {
-	y: 80%;
+	x: 10%;
+	y: 50%;
+	width: 80%;
 	fill: fb-lime;
 }
 
 .tumbler {
-	height: 180;
 	y: 50%-50;
 	fill: grey;
 }
 
+.tumbler text {
+	font-family: "Colfax-Light";
+	font-size: 80; 
+	text-anchor: middle;
+	x: 50%;
+	fill: white; 
+}
+
 .tumblerInt {
 	x: 0;
-	width: 60%;
+	width: 50%;
 }
 
 .tumblerFloat {
-	x: 70%;
-	width: 30%;
-}
-
-.tumblerInt text {
-	text-anchor: end;
-}
-
-.tumblerFloat text {
-	text-anchor: start;
+	x: 50%;
+	width: 25%;
 }
 
 .tumblerItem {
 	height: 90;
 }
 
-.tumblerItem text {
-	font-size: 80;
-	fill: white;
-	x: 5;
-}
-
 .tumblerSeparator {
 	font-size: 80;
 	text-anchor: middle;
-	x: 66%;
+	x: 52%;
 	y: 50%+30;
 }
 
 .tumblerUnit {
- font-size: 80;
+ font-size: 56;
  text-anchor: start;
- x: 92%;
+ x: 75%;
  y: 50%+30;
 }
 
