--- a/resources/styles.css
+++ b/resources/styles.css
@@ -4,6 +4,12 @@
 	fill: white;
 }
 
+.background {
+	width: 100%;
+	height: 100%;
+	fill: black;
+  }
+
 .bgPopUp {
 	x: 0;
 	y: 0;
@@ -122,12 +128,51 @@
 }
 
 /* 2nd screen */
-#txtWeightList {
+.bgList {
 	x: 0;
-	y: 10%;
+	y: 12%+2;
 	width: 100%;
-	height: 90%;
-	font-size: 12;
-	text-anchor: start;
-	display-align: before;
+	height: 80%;
+	opacity: 1;
 }
+
+.listWeightLog {
+	height: 60;
+}
+
+.txtListWeightLog {
+	font-size: 22;
+}
+
+.header {
+	font-size: 24;
+	text-anchor: middle;
+	fill: fb-extra-dark-gray;
+	x: 50%;
+	y: 1%+24;
+}
+
+.headRect {
+	x: 0;
+	y: 0;
+	width : 100%;
+	height: 12%;
+}
+
+.footRect {
+x: 0;
+y: 92%;
+width : 100%;
+height: 8%;
+fill: black;
+}
+
+.headLine {
+x1: 0;
+x2: 100%;
+y1: 12%;
+y2: 12%;
+stroke-width: 2;
+fill: fb-light-gray;
+}
+
