--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,8 +1,13 @@
 /* general */
- text {
+text {
 	font-family: "Colfax-Light";
 	fill: white;
 	text-length: 32;
+}
+
+textarea {
+	font-family: "Colfax-Light";
+	fill: white;
 }
 
 .background {
@@ -54,18 +59,6 @@
 }
 
 /* main screen */
-#welcomeText {
-	x: 10%;
-	y: 18%;
-	width: 80%;
-	height: 30%;
-	text-anchor: middle;
-	display-align: center;
-	font-size: 32;
-	font-family: "Colfax-Light";
-	fill: white;
-}
-
 #btnNewWeight {
 	x: 10%;
 	y: 50%;
@@ -175,19 +168,4 @@
 	y2: 12%;
 	stroke-width: 2;
 	fill: fb-light-gray;
-}
-
-/* error pop up*/
-#alertText {
-	font-family: "Colfax-Light";
-	font-size: 20;
-	font-weight: bold;
-	fill: fb-red;
-	x: 5%;
-	y: 5%;
-	width: 90%;
-	height: 90%;
-	text-anchor: middle;
-	display-align: center;
-	text-length: 256;	
 }
